--- a/assets/style.css
+++ b/assets/style.css
@@ -1,15 +1,29 @@
-body {
+
+body,
+html    {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    background-image: url(./clouds3.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
 }
 
 .container {
-    max-width: 800px;
-    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    margin: 0;
     padding: 20px;
-    background-color: #ffffff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
+
 
 h1 {
     text-align: center;
@@ -19,15 +33,20 @@ h1 {
 form {
     display: flex;
     justify-content: center;
+    width: 100%;
+    padding:   0 20px;
+    margin-bottom: 40px;
 }
 
 input {
-    flex-grow: 1;
+    width:  50%;
+    max-width: 400px;
+    margin: 0 auto;
 }
 
 button {
     background-color: #0077cc;
-    color: #ffffff;
+    color:  whitesmoke;
     border: none;
     padding: 10px;
     margin-left: 5px;
@@ -38,22 +57,50 @@ button:hover {
     background-color: #005fa3;
 }
 
-#current-weather,
-#forecast > div {
-    background-color: #f0f0f0;
+
+#forecast > div {  
+    background-color:   white;
     padding: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 10px; 
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex: 0 0 calc(20% - 10px);
+    margin: 0 5px;
+
 }
 
+
+#current-weather {
+    background-color: white;
+    padding: 20px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}  
+
+
 .forecast-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    gap: 20px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap:  nowrap;
 }
+
+
+.hidden {
+    display: none;
+}
+
 
 .weather-icon {
     width: 50px;
     height: 50px;
 }
 
+
+@media (min-width: 576px)   {
+    .container  {
+        max-width: 540px;
+        margin: 20px auto;
+    }
+}
